syntax = "proto3";
package tcp_msg.global; 

import "tcp_msg.cmd.common.proto";

message IdentifyRequest{
    CommonHeader    header  =   1;
}

message IdentifyResponse{
    CommonHeader    header  =   1;
    int32           id      =   2;   
}

message  StartUpdateRequest
{ 
    CommonHeader    header  =   1;
}


